--- a/index.html
+++ b/index.html
@@ -689,7 +689,7 @@
             <div class="col-md-3 col-sm-6 mb-3">
                 <div class="property-card">
                     <img src="./Images/icon-neighborhood.png" alt="Office">
-                    <h4>Townhous</h4>
+                    <h4>Townhouse</h4>
                     <p>123 Properties</p>
                 </div>
             </div>
